Fixed the alignment in the navigation. Created a button on the bottom of the page.

--- a/css/index.css
+++ b/css/index.css
@@ -172,8 +172,9 @@ p {
 .container nav {
   display: flex;
   justify-content: space-evenly;
-  width: 80%;
+  width: 55%;
   margin: 2% 0;
+  padding-top: 0.5%;
 }
 .container nav a {
   font-size: 1.6rem;
