--- a/less/navigation.less
+++ b/less/navigation.less
@@ -7,8 +7,9 @@
     nav {
         display: flex;
         justify-content: space-evenly;
-        width: 80%;
+        width: 55%;
         margin:2% 0;
+        padding-top:.5%;
         
 
         a {
